--- a/index.html
+++ b/index.html
@@ -3,17 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaia's Departure Time Calculator</title>
+    <title>Departure Time Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h1>Kaia's Departure Time Calculator</h1>
-        <label for="trip-hours">Hours:</label>
-        <input type="number" id="trip-hours" placeholder="Hours">
-        <label for="trip-minutes">Minutes:</label>
-        <input type="number" id="trip-minutes" placeholder="Minutes">
-        <button id="calculate">Calculate Departure Time</button>
+        <fieldset>
+            <legend for="arrival-time">Arrival Time</legend>
+            <select name="arrival-time-hour" id="arrival-time-hour" >
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+            </select>
+            <label for="colon">:</label>
+            <select name="arrival-time-minute" id="arrival-time-minute">
+                <option value="00">00</option>
+                <option value="15">15</option>
+                <option value="30">30</option>
+                <option value="45">45</option>
+            </select>
+            <div>
+                <input type="radio" id="AM" name="meridiem" value="AM" checked/>
+                <label for="AM">AM</label>
+            </div>
+            <div>
+                <input type="radio" id="PM" name="meridiem" value="PM" />
+                <label for="PM">PM</label>
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend for="trip-length">Trip Length</legend>
+            <label for="trip-hours">Hours:</label>
+            <input type="number" id="trip-hours" placeholder="Hours">
+            <label for="trip-minutes">Minutes:</label>
+            <input type="number" id="trip-minutes" placeholder="Minutes">
+            <button id="calculate">Calculate Departure Time</button>
+        </fieldset>
         <div id="result"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.4/dayjs.min.js"></script>
