Added JS logic for calculating departure time

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Kaia's Departure Time Calculator</h1>
         <fieldset>
             <legend for="arrival-time">Arrival Time</legend>
-            <select name="arrival-time-hour" id="arrival-time-hour" >
+            <select name="arrival-hour" id="arrival-hour" >
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -26,7 +26,7 @@
                 <option value="12">12</option>
             </select>
             <label for="colon">:</label>
-            <select name="arrival-time-minute" id="arrival-time-minute">
+            <select name="arrival-minute" id="arrival-minute">
                 <option value="00">00</option>
                 <option value="15">15</option>
                 <option value="30">30</option>
