--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
             <legend for="trip-length">Trip Length</legend>
             <label for="trip-hours">Hours:</label>
             <input type="number" id="trip-hours" placeholder="Hours">
-            <label for="trip-minutes">Minutes:</label>
-            <input type="number" id="trip-minutes" placeholder="Minutes">
+            <div>
+            </div>
+            <label for="trip-minutes" class="label">Minutes:</label>
+            <input type="number" id="trip-minutes" class="input" placeholder="Minutes">
             <button id="calculate">Calculate Departure Time</button>
         </fieldset>
         <div id="result"></div>
